# Accessible-Travel-Planning-Tool

./: .gitignore  LICENSE  README.md  config.py  pyproject.toml  run.py
insta485/: __init__.py  config.py
insta485/static/css/: style.css
insta485/templates/: create.html  delete.html  edit.html  explore.html  followers.html  following.html  index.html  login.html  password.html  post.html  search.html  user.html
insta485/views/: __init__.py  accounts.py  comments.py  explore.py  following.py  index.py  likes.py  posts.py  search.py  users.py
sql/: createTables.sql  data.sql  dropTables.sql  insertData.sql  schema.sql
